# SimpleTownBike

./: .gitignore  .replit  Pasted-2024-10-27-15-59-45-893-python-38389-20662421-PyObjC-Converting-exception-to-Objective-C-Tracebac-1730066512822.txt  README.md  ble_manager.py  main.py  metrics_visualization.py  pyproject.toml  replit.nix  storage_manager.py  target_settings.py  ui_components.py  utils.py  workout_manager.py
