[tool.poetry]
name = "SimpleTownBike"
version = "0.1.0"
description = "A Streamlit-based bike fitness tracking app with BLE device connectivity"
authors = ["jeremy wong <jeremydwong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.14"
bleak = "0.22.3"
streamlit = "1.39.0"
matplotlib = "^3.9.2"
numpy = "^1.24.0"
pandas = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"